--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": ">=5.3.3",
         "symfony/framework-bundle": ">=2.1.0",
-        "snc/redis-bundle": "dev-master",
+        "snc/redis-bundle": "1.1.*",
         "predis/predis": ">=0.8.5"        
     },    
     "autoload": {
