predis/predis hard requirement added

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "require": {
         "php": ">=5.3.3",
         "symfony/framework-bundle": ">=2.1.0",
+        "predis/predis": "dev-master",
         "snc/redis-bundle": "dev-master"        
     },    
     "autoload": {
