--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     "require": {
         "php": ">=5.3.3",
         "symfony/framework-bundle": ">=2.1.0",
-        "predis/predis": "v1.0.0",
-        "snc/redis-bundle": "1.1.9"        
+        "predis/predis": "v1.1.*",
+        "snc/redis-bundle": "2.*"        
     },    
     "autoload": {
         "psr-0": {            
