corrected ver snc redis

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "php": ">=5.3.3",
         "symfony/framework-bundle": ">=2.1.0",
         "predis/predis": "v1.1.*",
-        "snc/redis-bundle": "1.1.10"
+        "snc/redis-bundle": "1.1.*"
     },
     "autoload": {
         "psr-0": {
